Fix crash when /usr/share/X11/xkb is empty

Fallback to Stub implementation instead of crashing.

Pick-to: 6.5
Task-number: QTBUG-105124
Change-Id: I7ad41daefe279b33bf924c74ee90e7d6a2375a63
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>